--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 	"dependencies": {
 		"@react-router/node": "^7.2.0",
 		"@react-router/serve": "^7.2.0",
+		"axios": "^1.7.9",
+		"dotenv": "^16.4.7",
 		"isbot": "^5.1.17",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
-		"react-router": "^7.2.0"
+		"react-router": "^7.2.0",
+		"react-toastify": "^11.0.3"
 	},
 	"devDependencies": {
 		"@react-router/dev": "^7.2.0",
@@ -24,6 +27,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
+		"axios-jwt": "^4.0.3",
 		"react-router-devtools": "^1.1.0",
 		"tailwind-forms": "^1.0.6",
 		"tailwindcss": "^4.0.8",
