--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-router": "^7.2.0",
-		"react-toastify": "^11.0.3"
+		"react-toastify": "^11.0.3",
+		"todo-react": "link:"
 	},
 	"devDependencies": {
 		"@react-router/dev": "^7.2.0",
