--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@headlessui/react": "^2.2.0",
 		"@react-router/node": "^7.2.0",
 		"@react-router/serve": "^7.2.0",
 		"axios": "^1.7.9",
