--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@headlessui/react": "^2.2.0",
 		"@react-router/node": "^7.2.0",
 		"@react-router/serve": "^7.2.0",
+		"@tailwindcss/line-clamp": "^0.4.4",
 		"axios": "^1.7.9",
 		"dotenv": "^16.4.7",
 		"isbot": "^5.1.17",
